--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "-": "^0.0.1",
-    "@angular/animations": "~13.0.0",
+    "@angular/animations": "~13.0.3",
     "@angular/cdk": "^13.0.3",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/forms": "~13.0.0",
-    "@angular/material": "^13.0.3",
+    "@angular/material": "^13.2.5",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@kolkov/angular-editor": "^1.2.0",
+    "@types/uuid": "^8.3.4",
     "angularx": "^0.0.13",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.1.3",
@@ -33,6 +33,7 @@
     "rxjs": "~7.4.0",
     "social": "^0.4.0",
     "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
