--- a/server/build.gradle
+++ b/server/build.gradle
@@ -51,6 +51,15 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
+
+	//web socket
+	implementation "org.springframework.boot:spring-boot-starter-websocket"
+	implementation "org.webjars:stomp-websocket:2.3.3"
+
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
+	implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+	implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
 }
 
 test {
