--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,8 +10,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.host=smtp.gmail.com
 spring.mail.username=ochesswithfriends@gmail.com
+#spring.mail.username:vwpdebug@gmail.com
 spring.mail.protocol=smtp
 spring.mail.password=kingpiece
+#spring.mail.password:vwpdebug2021
 spring.mail.port=587
 spring.freemarker.template-loader-path= classpath:/template/
 spring.freemarker.suffix= .ftlh
@@ -34,3 +36,7 @@ oc.token.jwtSecret=secret-keysecret-keysecret-keysecret-keysecret-keysecret-keys
 oc.email.template.confirmation=emailConfirmation.ftlh
 oc.email.template.password.reset=passwordReset.ftlh
 oc.email.template.recipient=email.ftlh
+
+logging.file=logs/chess.log
+logging.level.org.springframework.web=INFO
+log4j.logger.org.thymeleaf=DEBUG
